tests/gpu/check/illegal_dma.co
// RUN: not choreo -gs -t cute %s 2>&1 | FileCheck %s

__co__ void illegal_dma_direction(f32 [10, 9, 8] a) {
  global f32 [a.span] b, bb;
  parallel by 1, by 1 {
    shared f32 [a.span] c;
    f0 = dma.copy.async a => shared; // ok
    f1 = dma.copy.async b => bb; // not supported
    f2 = dma.copy.async c => shared; // not supported
    f3 = dma.copy.async c => b; // not supported
    f4 = dma.copy.async a => local; // not supported
    f5 = dma.copy.async b => local; // not supported
    f6 = dma.copy.async c => local; // not supported
    wait f0, f1, f2, f3, f4, f5, f6;
    dma.copy bb => b; // not supported
  }
}

// CHECK: error: GPU does not allow the async copy (global -> global).
// CHECK: error: GPU does not allow the async copy (shared -> shared).
// CHECK: error: GPU does not allow the async copy (shared -> global).
// CHECK: error: GPU does not allow the async copy (default -> local).
// CHECK: error: GPU does not allow the async copy (global -> local).
// CHECK: error: GPU does not allow the async copy (shared -> local).
// CHECK: error: GPU does not allow the sync copy (global -> global).
